# chronoapi

./: .gitignore  Dockerfile  LICENSE  MODEL-DESCRIPTION.md  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: config.py  main.py  model.py
app/api/: deps.py  factory.py  middleware.py
app/api/routes/: __init__.py  finetune.py  forecast.py  health.py  metrics.py
app/observability/: logging_setup.py  metrics.py
app/schemas/: __init__.py  requests.py
app/services/: constants.py  finetune.py  forecast.py  jobs.py  kafka.py
tests/: conftest.py  test_forecast.py  test_health.py  test_schemas.py
